--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@nestjs/platform-socket.io": "^8.2.6",
     "@nestjs/websockets": "^8.2.6",
     "bcrypt": "^5.0.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
     "express-session": "^1.17.2",
     "express-socket.io-session": "^1.3.5",
@@ -41,6 +43,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "ts-brand": "^0.0.2",
     "yargs": "^17.3.1"
   },
   "devDependencies": {
