--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
+    "dayjs": "^1.10.7",
     "express-session": "^1.17.2",
     "express-socket.io-session": "^1.3.5",
     "lodash": "^4.17.21",
